[package]
name = "gemini-silicon"
version = "0.1.0"
description = "A highly optimized, lightweight Tauri wrapper for Google Gemini"
authors = ["anongecko"]
license = "CC0-1.0"
repository = ""
edition = "2021"
rust-version = "1.88"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.5.2", features = ["wry"], default-features = false }
tauri-plugin-opener = "2.5.2"
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
tikv-jemallocator = "0.6"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
